Splash Screen design in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HeadLines</string>
+    <string name="splash_desc">STAY UPDATE WITH\nARTICLES DESIGNED\nFOR YOU</string>
 </resources>
