--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HeadLines</string>
     <string name="splash_desc">STAY UPDATE WITH\nARTICLES DESIGNED\nFOR YOU</string>
+    <string name="start_reading">START READING</string>
 </resources>
