--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HeadLines</string>
     <string name="splash_desc">STAY UPDATE WITH\nARTICLES DESIGNED\nFOR YOU</string>
     <string name="start_reading">START READING</string>
+    <string name="read_full_article">READ FULL ARTICLE</string>
 </resources>
